add new create-paper pages

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -115,6 +115,16 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
+                                                            <a href="javascript:;" routerLink="/create-paper-except-tax">กระดาษทำการตรวจสอบปริมาณขอยกเว้นภาษี</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
                                                             กระดาษทำการตรวจสอบการส่งออก
                                                         </div>
                                                     </div>
@@ -136,6 +146,36 @@
                                                     <div class="content">
                                                         <div class="header">
                                                             ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/create-paper-quantity-tax">กระดาษทำการตรวจสอบปริมาณการชำระภาษี</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/create-paper-quantity-product">กระดาษทำการตรวจสอบปริมาณการจ่ายสินค้าสำเร็จรูป</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/create-paper-value-tax">กระดาษทำการเรื่องราคาที่ยื่นชำระภาษี</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -173,7 +213,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                                <a href="javascript:;" routerLink="/create-paper-check-value">กระดาษทำการตรวจสอบด้านมูลค่า</a>
+                                                            <a href="javascript:;" routerLink="/create-paper-check-value">กระดาษทำการตรวจสอบด้านมูลค่า</a>
                                                         </div>
                                                     </div>
                                                 </div>
