--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-paper-value-tax/create-paper-value-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-paper-value-tax/create-paper-value-tax.component.html
@@ -1,3 +1,153 @@
-<p>
-  create-paper-value-tax works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">สร้างกระดาษทำการเรื่องราคาที่ยื่นชำระภาษี</h2>
+
+    <div class="ui top attached header">
+      <span>Criteria</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
+            <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
+            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">ผู้ประกอบการ </label>
+            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
+            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field required">
+            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+            <div class="eight wide field">
+              <div class="ui icon input">
+                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+            <div class="eight wide field">
+              <label>-</label>
+              <div class="ui icon input">
+                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui top attached header">
+      <span>อัพโหลด Template ข้อมูลปริมาณการเรื่องราคาที่ยื่นชำระภาษี</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
+            <input type="file" />
+          </div>
+        </div>
+      </div>
+
+      <div class="ui center aligned grid">
+        <div class="four wide column">
+          <button class="ui mini primary button" (click)="uploadData()">
+            <i class="upload icon"></i>
+            อัพโหลด
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="trash outline icon"></i>
+            ลบไฟล์
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui segment" *ngIf="showData">
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          บ. ฮอนด้า มอเตอร์ ประเทศไทย
+          <br> กระดาษทำการเรื่องราคาที่ยื่นชำระภาษี
+          <br> เดือน พ.ย. 2559 - ส.ค. 2559
+        </div>
+      </div>
+
+      <table class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th>เดือน</th>
+            <th>รายการ</th>
+            <th>ราคาขายปลีกแนะนำตามแบบแจ้ง</th>
+            <th>ราคาที่ยื่นชำระภาษี</th>
+            <th>ผลต่าง</th>
+            <th>ราคาขายปลีก</th>
+            <th>ผลต่าง</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="text-align: center;">
+            <td style="text-align: left;">ม.ค. 59</td>
+            <td>A</td>
+            <td>20</td>
+            <td>20</td>
+            <td>0</td>
+            <td>20</td>
+            <td>
+              <span class="ui green horizontal label right aligned" style="float: right;">0</span>
+            </td>
+          </tr>
+          <tr style="text-align: center;">
+            <td style="text-align: left;">ม.ค. 59</td>
+            <td>B</td>
+            <td>15</td>
+            <td>15</td>
+            <td>0</td>
+            <td>16</td>
+            <td>
+              <span class="ui red horizontal label right aligned" style="float: right;">1</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="ui center aligned grid">
+        <div class="six wide column">
+          <button class="ui mini primary button">
+            <i class="print icon"></i>
+            พิมพ์กระดาษทำการ
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <div class="ui grid center aligned">
+      <div class="sixteen wide column">
+        <button class="ui mini button" routerLink="/select-form">
+          <i class="arrow left icon"></i>
+          ย้อนกลับ
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
