--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -115,7 +115,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                            <a href="javascript:;" routerLink="/ope04-8">กระดาษทำการตรวจสอบด้านราคา</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -125,7 +125,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;">กระดาษทำการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
+                                                            <a href="javascript:;" routerLink="/ope04-9">กระดาษทำการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -135,7 +135,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                            <a href="javascript:;" routerLink="/ope04-10">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -277,34 +277,7 @@
                                     3
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/1"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <table class="ui small celled table" *ngIf="showSubMenuTax">
-                        <thead>
-                            <tr>
-                                <th>NO.</th>
-                                <th>กระดาษทำการตรวจสอบการลดหย่อนภาษี</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    1
-                                </td>
-                                <td>
-                                    <a href="javascript:;"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    2
-                                </td>
-                                <td>
-                                    <a href="javascript:;"> กระดาษทำการตรวจสอบราคาต่อหน่วยของสินค้าที่ขอลดหย่อนภาษี </a>
+                                    <a href="javascript:;" routerLink="/ope04-3"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
                                 </td>
                             </tr>
                         </tbody>
@@ -323,7 +296,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/create-paper-receive-instant"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                             <tr>
@@ -331,7 +304,34 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/create-paper-pay-instant"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table class="ui small celled table" *ngIf="showSubMenuTax">
+                        <thead>
+                            <tr>
+                                <th>NO.</th>
+                                <th>กระดาษทำการตรวจสอบการลดหย่อนภาษี</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    1
+                                </td>
+                                <td>
+                                    <a href="javascript:;" routerLink="/ope04-6"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    2
+                                </td>
+                                <td>
+                                    <a href="javascript:;" routerLink="/ope04-7"> กระดาษทำการตรวจสอบราคาต่อหน่วยของสินค้าที่ขอลดหย่อนภาษี </a>
                                 </td>
                             </tr>
                         </tbody>
