add new page ope05

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -153,7 +153,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            กระดาษทำการตรวจสอบด้านปริมาณ
+                                                            <a href="javascript:;" routerLink="/ope05-1">กระดาษทำการตรวจสอบด้านปริมาณ</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -163,7 +163,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            กระดาษทำการตรวจสอบด้านราคา
+                                                            <a href="javascript:;" routerLink="/ope05-2">กระดาษทำการตรวจสอบด้านราคา</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -173,7 +173,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/create-paper-check-value">กระดาษทำการตรวจสอบด้านมูลค่า</a>
+                                                            <a href="javascript:;" routerLink="/ope05-3">กระดาษทำการตรวจสอบด้านมูลค่า</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -183,7 +183,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            กระดาษาทำการตรวจสอบสถานะสมาชิก
+                                                            <a href="javascript:;" routerLink="/ope05-4">กระดาษาทำการตรวจสอบสถานะสมาชิก</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -193,7 +193,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            กระดาษทำการตรวจนับสินค้าคงเหลือ
+                                                            <a href="javascript:;" routerLink="/ope05-5">กระดาษทำการตรวจนับสินค้าคงเหลือ</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -203,7 +203,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            กระดาษทำการตรวจสอบมูลค่าขอยกเว้นภาษี
+                                                            <a href="javascript:;" routerLink="/ope05-6">กระดาษทำการตรวจสอบมูลค่าขอยกเว้นภาษี</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -213,7 +213,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม
+                                                            <a href="javascript:;" routerLink="/ope05-7">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
                                                         </div>
                                                     </div>
                                                 </div>
