--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -153,7 +153,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-1">กระดาษทำการตรวจสอบด้านปริมาณ</a>
+                                                            <a href="javascript:;" [routerLink]="routerOpe051">กระดาษทำการตรวจสอบด้านปริมาณ</a>
                                                         </div>
                                                     </div>
                                                 </div>
