--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-7/ope05-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-7/ope05-7.component.html
@@ -1,3 +1,150 @@
-<p>
-  ope05-7 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">สร้างตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</h2>
+
+    <div class="ui top attached header">
+      <span>Criteria</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
+            <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
+            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">ผู้ประกอบการ </label>
+            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
+            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field required">
+            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+            <div class="eight wide field">
+              <div class="ui icon input">
+                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+            <div class="eight wide field">
+              <label>-</label>
+              <div class="ui icon input">
+                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui top attached header">
+      <span>อัพโหลด Template ข้อมูลการคำนวณภาษีที่ต้องชำระเพิ่ม</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
+            <input type="file" />
+          </div>
+        </div>
+      </div>
+
+      <div class="ui center aligned grid">
+        <div class="four wide column">
+          <button class="ui mini primary button" (click)="uploadData()">
+            <i class="upload icon"></i>
+            อัพโหลด
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="trash outline icon"></i>
+            ลบไฟล์
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui segment" *ngIf="showData">
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          บ. ฮอนด้า มอเตอร์ ประเทศไทย
+          <br> กระดาษทำการคำนวณภาษีที่ต้องชำระเพิ่ม
+          <br> เดือน พ.ย. 2559 - ส.ค. 2559
+        </div>
+      </div>
+      <br>
+      <div style="overflow-x: scroll">
+        <table class="ui small celled table" style="width: 120%">
+          <thead>
+            <tr style="text-align: center;">
+              <th>เดือน</th>
+              <th>รายการ</th>
+              <th>ปริมาณ</th>
+              <th>ราคาค่าบริการ</th>
+              <th>มูลค่า</th>
+              <th>อัตราภาษี (ร้อยละ)</th>
+              <th>ภาษีที่ต้องชำรำเพิ่มเติม</th>
+              <th>เบี้ยปรับ</th>
+              <th>เงินเพิ่ม</th>
+              <th>ภาษีเพื่อราชการส่วนท้องถิ่น</th>
+              <th>รวม</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="six wide column">
+          <button class="ui mini primary button">
+            <i class="print icon"></i>
+            พิมพ์กระดาษทำการ
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <div class="ui grid center aligned">
+      <div class="sixteen wide column">
+        <button class="ui mini button" routerLink="/select-form">
+          <i class="arrow left icon"></i>
+          ย้อนกลับ
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
