--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
@@ -275,7 +275,7 @@
     <br>
     <div class="ui grid center aligned">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/select-form">
+        <button class="ui mini button" routerLink="/select-form/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
