update route parameter

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-new-form/select-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-new-form/select-new-form.component.html
@@ -109,7 +109,7 @@
                         <i class="plus icon"></i>
                         สร้างกระดาษทำการ
                     </button>
-                    <button class="ui mini button" routerLink="/select-form/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
+                    <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
                         <i class="remove icon"></i>
                         ยกเลิก
                     </button>
