--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-paper-pay-material/create-paper-pay-material.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-paper-pay-material/create-paper-pay-material.component.html
@@ -146,7 +146,7 @@
     <br>
     <div class="ui grid center aligned">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/select-form/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
+        <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
