--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-7/ope05-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-7/ope05-7.component.html
@@ -48,6 +48,17 @@
             </div>
           </div>
         </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">ประเภท </label>
+            <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="บริการ">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">พิกัด</label>
+            <input type="text" class="custom-readonly" placeholder="พิกัด" readonly="" value="อาบอบนวด">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -88,40 +99,38 @@
         </div>
       </div>
       <br>
-      <div style="overflow-x: scroll">
-        <table class="ui small celled table" style="width: 120%">
-          <thead>
-            <tr style="text-align: center;">
-              <th>เดือน</th>
-              <th>รายการ</th>
-              <th>ปริมาณ</th>
-              <th>ราคาค่าบริการ</th>
-              <th>มูลค่า</th>
-              <th>อัตราภาษี (ร้อยละ)</th>
-              <th>ภาษีที่ต้องชำรำเพิ่มเติม</th>
-              <th>เบี้ยปรับ</th>
-              <th>เงินเพิ่ม</th>
-              <th>ภาษีเพื่อราชการส่วนท้องถิ่น</th>
-              <th>รวม</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <table class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th>เดือน</th>
+            <th>รายการ</th>
+            <th>ปริมาณ</th>
+            <th>ราคาค่าบริการ</th>
+            <th>มูลค่า</th>
+            <th>อัตราภาษี (ร้อยละ)</th>
+            <th>ภาษีที่ต้องชำรำเพิ่มเติม</th>
+            <th>เบี้ยปรับ</th>
+            <th>เงินเพิ่ม</th>
+            <th>ภาษีเพื่อราชการส่วนท้องถิ่น</th>
+            <th>รวม</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+        </tbody>
+      </table>
       <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
